fixed overflow bug on leaderboard

--- a/client/style.css
+++ b/client/style.css
@@ -680,12 +680,12 @@ canvas {
 }
 
 #LeaderBoardDataScore {
-  margin-top: 13px;
+  margin-top: 9px;
   font-size: 15px;
 }
 
 #LeaderBoardDataUser {
-  margin-top: 13px;
+  margin-top: 9px;
   font-size: 15px;
 }
 
